test_regress/t/t_tagged.out
%Error-UNSUPPORTED: t/t_tagged.v:10:6: Unsupported: void (for tagged unions)
   10 |      void m_invalid;
      |      ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_tagged.v:19:14: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   19 |          u = tagged m_invalid;
      |              ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_tagged.v:33:13: Unsupported: matches operator
   33 |       if (u matches tagged m_invalid) ;
      |             ^~~~~~~
%Error-UNSUPPORTED: t/t_tagged.v:34:13: Unsupported: matches operator
   34 |       if (u matches tagged m_int .n) $stop;
      |             ^~~~~~~
%Error: t/t_tagged.v:36:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   36 |       u = tagged m_int (123);
      |           ^~~~~~
%Error: t/t_tagged.v:41:22: syntax error, unexpected '.', expecting ':' or :-then-begin or :-then-fork
   41 |         tagged m_int .n: if (n !== 123) $stop;
      |                      ^
%Error-UNSUPPORTED: t/t_tagged.v:45:13: Unsupported: matches operator
   45 |       if (u matches tagged m_int .n) if (n != 123) $stop;
      |             ^~~~~~~
%Error: Exiting due to
